# labeling-tool-backend

./: .env.example  .gitignore  pyproject.toml  requirements.txt
config/schemas/: e14_camara.yaml  e14_senado.yaml
src/: main.py
src/application/use_cases/: auto_label_use_case.py  create_workspace_use_case.py  delete_annotation_use_case.py  export_annotations_use_case.py  export_labels_to_blob_use_case.py  get_document_use_case.py  get_label_schema_use_case.py  get_training_status_use_case.py  get_workspace_use_case.py  list_annotations_use_case.py  list_documents_use_case.py  list_workspaces_use_case.py  mark_document_done_in_workspace_use_case.py  mark_document_done_use_case.py  save_annotation_use_case.py  start_training_from_workspace_use_case.py  update_annotation_use_case.py  upload_document_to_workspace_use_case.py  upload_document_use_case.py
src/domain/entities/: annotation.py  bounding_box.py  document_kind.py  document_page.py  label_definition.py  label_schema.py  labeling_document.py  labeling_status.py  (+2 more)
src/infrastructure/: config.py  dependencies.py
tests/e2e/: conftest.py  test_annotations_api.py  test_documents_api.py  test_health.py  test_schemas_api.py
tests/integration/: test_local_annotation_repository.py  test_local_document_repository.py  test_yaml_label_schema_repository.py
tests/unit/: test_bounding_box.py  test_delete_annotation_use_case.py  test_export_annotations_use_case.py  test_label_schema.py  test_labeling_document.py  test_list_annotations_use_case.py  test_save_annotation_use_case.py  test_update_annotation_use_case.py
(+44 files in other folders)
