[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labeling-tool-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic-settings",
    "pypdfium2",
    "Pillow",
    "PyYAML",
    "azure-storage-blob>=12.19.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
